CSS improvements: Fixed sidebar overlap, fixed the table layout, fixed the login template.

--- a/Venter/static/assets/css/login.css
+++ b/Venter/static/assets/css/login.css
@@ -13,9 +13,11 @@ input {
   }
 
   .out{
-      height: 88vh;
-      width: 100vw;
+      height: 100vh;
+      max-width: 100vw;
+      background: 100%;
       background-color: #accffe;
+      padding: 5px 15px; /* This padding brings it in line with top navbar, I think */
   }
   .submit-login {
     background-color: #58b0e0;
@@ -33,6 +35,9 @@ input {
     opacity: 0.6;
   }
   
+  .wrapper{
+    overflow: hidden;
+  }
   .main_container{
       width: 450px;
       height: 600px;
@@ -55,8 +60,10 @@ input {
   .login-image{
       width: 300px;
   }
-  .container {
-    padding: 16px;
+
+  /* Since container-fluid leaves weird borders on the edge due to its default padding, I have overrridden it. */
+  .container-fluid {
+    padding: 0px;
   }
   
   span.psw {
